--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,8 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="법률 상담 전, AI로 사건을 정리하고 관련 법률·판례를 한눈에 확인하세요.">
+  <meta name="keywords" content="법률, AI 법률, 사건 요약, 판례 검색, 변호사 상담" />
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -29,7 +30,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>law_decode</title>
+  <title>로디코드 | AI 법률 사건 정리 서비스</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
